--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 .container-Div1 {
+  display:block;
   background: white;
   margin: 10px;
   padding: 10px;
@@ -18,9 +19,14 @@
 
 .container-Div2 {
   background: white;
-  margin: 20px;
+  display: block;
+  margin: 100px;
   padding: 20px;
-  
+  color: red;
+}
+
+.btn {
+  color: red;
 }
 
 body {
